--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -258,6 +258,7 @@
     <dimen name="widget_margin_half">5dp</dimen>
     <dimen name="widget_margin">10dp</dimen>
     <dimen name="widget_margin_double">20dp</dimen>
+    <dimen name="widget_margin_x_double">24dp</dimen>
     <dimen name="widget_margin_quadruple">40dp</dimen>
     <dimen name="horizontal_input_padding">@dimen/widget_margin</dimen>
     <dimen name="vertical_input_padding">8dp</dimen>
@@ -316,5 +317,8 @@
 
     <!-- Snack bar -->
     <dimen name="snack_bar_action_size">24dp</dimen>
+
+    <!-- Upgrade Now -->
+    <dimen name="upgrade_now_button_padding">4dp</dimen>
 
 </resources>
