feat: Add Video Download Qualities option
Add the video download quality selection
option on the Settings screen & Video Page

Video Selection Options:
- Auto (mobile_low → mobile_high → fallback)
- 360p (mobile_low)
- 540p (mobile_high)
- 720p (desktopMp4)

fixes: LEARNER-7612

--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -97,6 +97,10 @@
         <item name="android:textColor">@color/neutralBlackT</item>
     </style>
 
+    <style name="regular_primary_dark_color" parent="@style/regular_text">
+        <item name="android:textColor">@color/neutralBlackT</item>
+    </style>
+
     <style name="regular_primary_base_text" parent="@style/regular_text">
         <item name="android:textColor">@color/primaryBaseColor</item>
     </style>
@@ -231,6 +235,10 @@
         <item name="android:textColor">@color/neutralXDark</item>
         <item name="android:textSize">@dimen/edx_x_small</item>
         <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="video_download_quality_text_style" parent="regular_primary_base_text">
+        <item name="android:textSize">@dimen/edx_x_small</item>
     </style>
 
 </resources>
