revert: Loading indicator to be in center of parent
Added the attribute `layout_centerInParent` which was removed
in LEARNER-1688
fixes: LEARNER-1689

--- a/OpenEdXMobile/res/layout/loading_indicator.xml
+++ b/OpenEdXMobile/res/layout/loading_indicator.xml
@@ -6,7 +6,9 @@
         android:id="@+id/loading_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:visibility="gone"
+        tools:ignore="ObsoleteLayoutParam"
         tools:visibility="visible" />
 </layout>
