--- a/OpenEdXMobile/res/layout/toolbar_with_search_view.xml
+++ b/OpenEdXMobile/res/layout/toolbar_with_search_view.xml
@@ -24,24 +24,12 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/toolbar_profile_image"
-                style="@style/profile_image"
-                android:layout_width="@dimen/courses_profile_icon_size"
-                android:layout_height="@dimen/courses_profile_icon_size"
-                android:layout_marginStart="@dimen/courses_profile_icon_left_margin"
-                android:layout_marginEnd="@dimen/courses_title_text_left_margin"
-                android:contentDescription="@string/open_profile_button"
-                android:visibility="gone"
-                app:civ_border_width="@dimen/drawer_profile_image_border_width"
-                tools:src="@drawable/profile_photo_placeholder"
-                tools:visibility="visible" />
-
             <TextView
                 android:id="@+id/toolbar_title_view"
                 style="@style/AppTheme.ToolBar.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/edx_margin"
                 tools:text="Screen title" />
 
             <LinearLayout
