--- a/OpenEdXMobile/res/menu/my_courses.xml
+++ b/OpenEdXMobile/res/menu/my_courses.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_item_account"
-        android:title="@string/title_account"
+        android:title="@string/profile_title"
         app:showAsAction="always" />
 </menu>
