--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <style name="video_player_title" parent="@style/semibold_white_text">
         <item name="android:layout_width">0dp</item>
@@ -208,6 +208,29 @@
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/infoBase</item>
+    </style>
+
+    <style name="profile_field_title" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:fontFamily">?attr/fontSemiBold</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">@dimen/widget_margin_double</item>
+        <item name="android:textColor">@color/primaryDarkColor</item>
+        <item name="android:textSize">@dimen/edx_small</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="profile_field_description" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/edx_default_margin</item>
+        <item name="android:layout_marginEnd">@dimen/edx_default_margin</item>
+        <item name="android:fontFamily">?attr/fontRegular</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">@dimen/widget_margin_double</item>
+        <item name="android:textColor">@color/neutralXDark</item>
+        <item name="android:textSize">@dimen/edx_x_small</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
 </resources>
