--- a/OpenEdXMobile/res/layout/video_quality_layout.xml
+++ b/OpenEdXMobile/res/layout/video_quality_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
@@ -8,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/neutralXLight"
+        android:minHeight="@dimen/download_view_min_height"
         android:paddingStart="@dimen/widget_margin_double"
         android:paddingTop="@dimen/widget_margin"
         android:paddingEnd="@dimen/widget_margin_double"
@@ -27,7 +27,7 @@
             style="@style/video_download_quality_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/iv_video_quality_arrow"
+            android:layout_alignParentEnd="true"
             android:layout_toEndOf="@+id/iv_video_quality"
             android:text="@string/video_download_quality_title" />
 
@@ -37,21 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/video_download_label"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/edx_x_quarter_margin"
-            android:layout_toStartOf="@+id/iv_video_quality_arrow"
             android:layout_toEndOf="@+id/iv_video_quality"
             android:text="@string/auto_recommended_text" />
-
-        <ImageView
-            android:id="@+id/iv_video_quality_arrow"
-            android:layout_width="@dimen/ic_large"
-            android:layout_height="@dimen/ic_large"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/widget_margin"
-            android:src="@drawable/ic_arrow_right"
-            app:tint="@color/primaryXLightColor"
-            tools:ignore="ContentDescription" />
     </RelativeLayout>
 
 </layout>
