--- a/OpenEdXMobile/res/layout/video_quality_dialog_fragment.xml
+++ b/OpenEdXMobile/res/layout/video_quality_dialog_fragment.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/grey_top_roundedbg"
             android:gravity="start|center_vertical"
-            android:padding="@dimen/edx_margin"
+            android:padding="@dimen/edx_default_margin"
             android:text="@string/video_download_quality_title"
             android:textSize="@dimen/edx_small" />
 
@@ -25,10 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:paddingStart="@dimen/edx_margin"
-            android:paddingTop="@dimen/widget_margin_double"
-            android:paddingEnd="@dimen/edx_margin"
-            android:paddingBottom="@dimen/widget_margin_double"
+            android:padding="@dimen/edx_default_margin"
             android:textSize="@dimen/edx_xx_small"
             tools:text="@string/video_download_quality_message" />
 
@@ -45,7 +42,7 @@
             android:background="@android:color/transparent"
             android:divider="@color/neutralLight"
             android:dividerHeight="@dimen/video_player_settings_divider_height"
-            android:listSelector="@android:color/transparent"
+            android:listSelector="@drawable/selectable_rounded_box_overlay"
             tools:layout_height="250dp" />
 
         <View
@@ -59,12 +56,11 @@
             style="@style/bold_edx_black_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/white_roundedbg"
             android:gravity="start|center_vertical"
-            android:padding="@dimen/edx_margin"
+            android:background="@drawable/selectable_rounded_box_overlay"
+            android:padding="@dimen/edx_default_margin"
             android:text="@string/close"
-            android:textSize="@dimen/edx_small"
-            android:textStyle="bold" />
+            android:textSize="@dimen/edx_small"/>
 
     </LinearLayout>
 
