--- a/OpenEdXMobile/res/layout/video_quality_row_item.xml
+++ b/OpenEdXMobile/res/layout/video_quality_row_item.xml
@@ -3,32 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="@dimen/edx_margin">
+        android:orientation="horizontal"
+        android:padding="@dimen/edx_default_margin">
 
         <TextView
             android:id="@+id/tv_video_quality_row_title"
             style="@style/regular_primary_dark_color"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/iv_video_quality_check"
+            android:layout_weight="1"
             android:textSize="@dimen/edx_small"
             tools:text="@string/auto_recommended_text" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_video_quality_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_check"
             android:visibility="gone"
+            app:srcCompat="@drawable/ic_check"
             app:tint="@color/neutralBlack"
             tools:ignore="ContentDescription"
             tools:visibility="visible" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
