--- a/OpenEdXMobile/res/layout/fragment_account.xml
+++ b/OpenEdXMobile/res/layout/fragment_account.xml
@@ -85,41 +85,23 @@
                 android:layout_marginTop="@dimen/edx_default_margin"
                 android:background="@drawable/selectable_rounded_box_overlay"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingStart="@dimen/edx_default_margin"
                 android:paddingEnd="@dimen/edx_default_margin">
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical">
+                <TextView
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="@dimen/edx_half_margin"
+                    android:text="@string/video_download_quality_title" />
 
-                    <TextView
-                        style="@style/profile_field_title"
-                        android:layout_width="match_parent"
-                        android:layout_marginBottom="@dimen/edx_half_margin"
-                        android:text="@string/video_download_quality_title" />
+                <TextView
+                    android:id="@+id/tv_video_download_quality"
+                    style="@style/profile_field_description"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:text="@string/auto_recommended_text" />
 
-
-                    <TextView
-                        android:id="@+id/tv_video_download_quality"
-                        style="@style/profile_field_description"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginEnd="0dp"
-                        android:text="@string/auto_recommended_text" />
-
-                </LinearLayout>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/edx_half_margin"
-                    android:background="@drawable/ic_chevron_right"
-                    android:backgroundTint="@color/primaryBaseColor"
-                    android:paddingStart="@dimen/edx_half_margin"
-                    android:paddingEnd="@dimen/edx_half_margin" />
             </LinearLayout>
 
             <View
